--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -32,7 +32,7 @@
     "taskmanager-format": "Taskmanager hat ungültige Daten zurückgeliefert",
     "task-error": "Ausführung fehlgeschlagen: {{0}}",
     "invalid-ip": "Kein Interface ist auf die Adresse {{0}} konfiguriert",
-    "news-set-success": "News erfolgreich aktualisiert",
+    "news-save-success": "News erfolgreich aktualisiert",
     "news-empty": "Es wurde keine News in der Datenbank gefunden",
     "news-del-success": "News gelöscht",
     "reboot-unconfirmed": "Sicherheitsabfrage zum Reboot nicht bestätigt"
