--- a/lang/pt/sysconfig/cfg-start.json
+++ b/lang/pt/sysconfig/cfg-start.json
@@ -3,5 +3,5 @@
 	"lang_configuration":"Configuração",
 	"lang_configurationChoose":"Por favor, selecione qual os módulos serão usados ​​para esta configuração.",
 	"lang_new":"Nova",
-	"lang_next":"Próxiimo"
+	"lang_next":"Próximo"
 }
