--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -32,7 +32,7 @@
     "taskmanager-format": "Task Manager has returned invalid data",
     "task-error": "Execution failed: {{0}}",
     "invalid-ip": "No interface is configured with the address {{0}}",
-    "news-set-success": "News updated successfully",
+    "news-save-success": "News updated successfully",
     "news-empty": "There was no news found in the database",
     "news-del-success": "News deleted",
     "reboot-unconfirmed": "Confirmation prompt to reboot not confirmed"
