--- a/lang/pt/messages-hardcoded.json
+++ b/lang/pt/messages-hardcoded.json
@@ -8,5 +8,13 @@
 	"lang_generic":"Genérico",
 	"lang_addCustomModuleInfo":"Com um módulo estendido, é possível adicionar os arquivos para o sistema básico que usa este módulo, por exemplo, para usar arquivos de configuração específicas, que não podem ser criados com um dos outros assistentes. Adicionar um módulo estendido normalmente exige pelo menos um conhecimento básico do sistema Linux.",
 	"lang_days":"Dia(s)",
-	"lang_hours":"Hora(s)"
+	"lang_hours":"Hora(s)",
+	"lang_specificLogo":"Logotipo Específico da Instituição",
+	"lang_institutionLogo":"Logotipo da Instituição",
+	"lang_infoLogo":"Este módulo é usado para adicionar o logotipo de uma faculdade / universidade, que então, por exemplo, é exibido na tela de login.",
+	"lang_location":"Localização",
+	"lang_contentOf":"Conteúdo de \"",
+	"lang_serverConfiguration":"Configuração do servidor",
+	"lang_login":"Entrar",
+	"lang_createUser":"Criar Usuário"
 }
