[i18n] Altering JSONs through the web interface is now possible

--- a/lang/en/administration/_page.json
+++ b/lang/en/administration/_page.json
@@ -1,1 +1,1 @@
-{}
+{"lang_langAdministration":"Language Administration","lang_adminInfo":"","lang_editMessages":"Edit Messages","lang_german":"German","lang_english":"English","lang_portuguese":"Portuguese"}
