--- a/lang/de/administration/template.json
+++ b/lang/de/administration/template.json
@@ -1,1 +1,1 @@
-{}
+{"lang_germanJSON":"","lang_englishJSON":"","lang_portugueseJSON":"","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"","lang_back":"Z\u00fcruck","lang_update":"Hochladen"}
