--- a/lang/de/main-menu-login.json
+++ b/lang/de/main-menu-login.json
@@ -1,13 +1,1 @@
-{
-	"lang_clientLog":"Client Log",
-	"lang_settings":"Einstellungen",
-	"lang_client":"Client",
-	"lang_localization":"Lokalisierung",
-	"lang_configurationVariables":"KonfigurationsVariablen",
-	"lang_server":"Server",
-	"lang_configurationBasic":"Grundkonfiguration",
-	"lang_vmLocation":"VM Speicherort",
-	"lang_news":"News",
-	"lang_login":"Anmelden",
-	"lang_language":"Sprachen"
-}
+{"lang_clientLog":"Client Log","lang_settings":"Einstellungen","lang_client":"Client","lang_localization":"Lokalisierung","lang_configurationVariables":"KonfigurationsVariablen","lang_administration":"Verwaltung","lang_server":"Server","lang_configurationBasic":"Grundkonfiguration","lang_vmLocation":"VM Speicherort","lang_news":"News","lang_language":"Sprachen","lang_login":"Anmelden"}
