--- a/lang/en/administration/template.json
+++ b/lang/en/administration/template.json
@@ -1,1 +1,1 @@
-{}
+{"lang_germanJSON":"German JSON","lang_englishJSON":"","lang_portugueseJSON":"","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"","lang_back":"Back","lang_update":"Update"}
