[i18n]Corrected the system and added warnings to the table lines of the Language Administration page

--- a/lang/en/administration/messages.json
+++ b/lang/en/administration/messages.json
@@ -1,1 +1,1 @@
-{"lang_messages":"","lang_templateMessagesHelp":"","lang_germanJSON":"","lang_englishJSON":"","lang_portugueseJSON":"","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"","lang_messagesHardcoded":"","lang_back":"","lang_newTag":"","lang_update":""}
+{"lang_messages":"Messages","lang_templateMessagesHelp":"","lang_germanJSON":"German JSON","lang_englishJSON":"","lang_portugueseJSON":"","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"","lang_back":"","lang_newTag":"","lang_update":"Upload","lang_messagesHardcoded":""}
