--- a/lang/pt/messages.json
+++ b/lang/pt/messages.json
@@ -1,40 +1,1 @@
-{
-    "loginfail": "Nome de usuário ou senha incorreta",
-    "token": "Token inválido. Ataque CSRF?",
-    "adduser-disabled": "Privilégios insuficientes para adicionar mais usuários",
-    "password-mismatch": "Senha e confirmação de senha não são iguais",
-    "empty-field": "Um campo não foi preenchido",
-    "adduser-success": "Usuário adicionado com sucesso",
-    "no-permission": "Não há privilégios suficientes para acessar essa página",
-    "settings-updated": "As configurações foram atualizadas",
-    "debug-mode": "O modo de depuração está ativo!",
-    "value-invalid": "O valor {{1}} é inválido para opção {{0}} e foi ignorado",
-    "invalid-action": "Ação inválida: {{0}}",
-    "remote-timeout": "Não foi possível baixar o recurso {{0}} ({{1}})",
-    "remote-parse-failed": "Análise dos dados recebidos falhou ({{0}})",
-    "missing-file": "Não havia nenhum arquivo selecionado!",
-    "invalid-file": "O arquivo {{0}} não existe!",
-    "upload-complete": "Envio de {{0}} foi bem sucedido",
-    "upload-failed": "Envio falhou: {{0}}",
-    "config-activated": "Configuração {{0}} foi ativada",
-    "config-invalid": "Configuração com id {{0}} não existe",
-    "error-write": "Erro ao escrever {{0}}",
-    "error-read": "Erro ao ler {{0}}",
-    "error-archive": "Arquivo corrompido ou formato não suportado",
-    "error-rename": "Não foi possível renomear {{0}} em {{1}}",
-    "error-nodir": "O diretório {{0}} não existe.",
-    "empty-archive": "O arquivo não contém arquivos ou diretórios",
-    "error-extract": "Não foi possível descompactar arquivo {{0}} para {{1}}",
-    "module-added": "Módulo adicionado com sucesso",
-    "module-deleted": "Módulo {{0}} foi excluído",
-    "module-in-use": "Módulo {{0}} ainda é usado pela configuração {{1}}",
-    "taskmanager-error": "Falha ao conectar-se ao Gerenciador de Tarefas",
-    "taskmanager-format": "Gerenciador de Tarefas retornou dados inválidos",
-    "task-error": "Falha na execução: {{0}}",
-    "invalid-ip": "Nenhuma interface está configurada com o endereço {{0}}",
-    "news-save-success": "Notícia atualizada com sucesso",
-    "news-empty": "Não havia notícias no banco de dados",
-    "news-del-success": "Notícia excluída",
-    "reboot-unconfirmed": "Confirmação para reinicializar não foi confirmada",
-    "invalid-template":"Template selecionado não é válido"
-}
+{"loginfail":"Nome de usu\u00e1rio ou senha incorreta","token":"Token inv\u00e1lido. Ataque CSRF?","adduser-disabled":"Privil\u00e9gios insuficientes para adicionar mais usu\u00e1rios","password-mismatch":"Senha e confirma\u00e7\u00e3o de senha n\u00e3o s\u00e3o iguais","empty-field":"Um campo n\u00e3o foi preenchido","adduser-success":"Usu\u00e1rio adicionado com sucesso","no-permission":"N\u00e3o h\u00e1 privil\u00e9gios suficientes para acessar essa p\u00e1gina","settings-updated":"As configura\u00e7\u00f5es foram atualizadas","debug-mode":"O modo de depura\u00e7\u00e3o est\u00e1 ativo!","value-invalid":"O valor {{1}} \u00e9 inv\u00e1lido para op\u00e7\u00e3o {{0}} e foi ignorado","invalid-action":"A\u00e7\u00e3o inv\u00e1lida: {{0}}","remote-timeout":"N\u00e3o foi poss\u00edvel baixar o recurso {{0}} ({{1}})","remote-parse-failed":"An\u00e1lise dos dados recebidos falhou ({{0}})","missing-file":"N\u00e3o havia nenhum arquivo selecionado!","invalid-file":"O arquivo {{0}} n\u00e3o existe!","upload-complete":"Envio de {{0}} foi bem sucedido","upload-failed":"Envio falhou: {{0}}","config-activated":"Configura\u00e7\u00e3o {{0}} foi ativada","config-invalid":"Configura\u00e7\u00e3o com id {{0}} n\u00e3o existe","error-write":"Erro ao escrever {{0}}","error-read":"Erro ao ler {{0}}","error-archive":"Arquivo corrompido ou formato n\u00e3o suportado","error-rename":"N\u00e3o foi poss\u00edvel renomear {{0}} em {{1}}","error-nodir":"O diret\u00f3rio {{0}} n\u00e3o existe.","empty-archive":"O arquivo n\u00e3o cont\u00e9m arquivos ou diret\u00f3rios","error-extract":"N\u00e3o foi poss\u00edvel descompactar arquivo {{0}} para {{1}}","module-added":"M\u00f3dulo adicionado com sucesso","module-deleted":"M\u00f3dulo {{0}} foi exclu\u00eddo","module-in-use":"M\u00f3dulo {{0}} ainda \u00e9 usado pela configura\u00e7\u00e3o {{1}}","taskmanager-error":"Falha ao conectar-se ao Gerenciador de Tarefas","taskmanager-format":"Gerenciador de Tarefas retornou dados inv\u00e1lidos","task-error":"Falha na execu\u00e7\u00e3o: {{0}}","invalid-ip":"Nenhuma interface est\u00e1 configurada com o endere\u00e7o {{0}}","news-save-success":"Not\u00edcia atualizada com sucesso","news-empty":"N\u00e3o havia not\u00edcias no banco de dados","news-del-success":"Not\u00edcia exclu\u00edda","reboot-unconfirmed":"Confirma\u00e7\u00e3o para reinicializar n\u00e3o foi confirmada","invalid-template":"Template selecionado n\u00e3o \u00e9 v\u00e1lido"}
