--- a/lang/de/administration/messages.json
+++ b/lang/de/administration/messages.json
@@ -1,1 +1,1 @@
-{"lang_messages":"","lang_templateMessagesHelp":"","lang_germanJSON":"","lang_englishJSON":"","lang_portugueseJSON":"","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"","lang_messagesHardcoded":"","lang_back":"","lang_newTag":"","lang_update":""}
+{"lang_messages":"","lang_templateMessagesHelp":"","lang_germanJSON":"","lang_englishJSON":"","lang_portugueseJSON":"","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"","lang_back":"","lang_newTag":"","lang_update":"Hochladen","lang_messagesHardcoded":""}
