--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -1,40 +1,1 @@
-{
-    "loginfail": "Username or Password incorrect",
-    "token": "Invalid token. CSRF attack?",
-    "adduser-disabled": "Insufficient privileges to add more users",
-    "password-mismatch": "Password and password confirmation do not match",
-    "empty-field": "A field was not filled",
-    "adduser-success": "User successfully added",
-    "no-permission": "No sufficient privileges to access this page",
-    "settings-updated": "Settings have been updated",
-    "debug-mode": "The debug mode is active!",
-    "value-invalid": "The value {{1}} is invalid for option {{0}} and has been ignored",
-    "invalid-action": "Invalid action: {{0}}",
-    "remote-timeout": "Could  not download resource {{0}} ({{1}})",
-    "remote-parse-failed": "Parsing the received data failed ({{0}})",
-    "missing-file": "There was no file selected!",
-    "invalid-file": "The file {{0}} does not exist!",
-    "upload-complete": "Upload of {{0}} was successful",
-    "upload-failed": "Upload failed: {{0}}",
-    "config-activated": "Configuration {{0}} has been activated",
-    "config-invalid": "Configuration with id {{0}} does not exist",
-    "error-write": "Failed to write {{0}}",
-    "error-read": "Error reading {{0}}",
-    "error-archive": "Corrupted archive or unsupported format",
-    "error-rename": "Could not rename {{0}} into {{1}}",
-    "error-nodir": "The directory {{0}} does not exist.",
-    "empty-archive": "The archive contains no files or directories",
-    "error-extract": "Could not unpack archive {{0}} to {{1}}",
-    "module-added": "Module successfully added",
-    "module-deleted": "Module {{0}} was deleted",
-    "module-in-use": "Module {{0}} is still used by Configuration {{1}}",
-    "taskmanager-error": "Failed to connect to the Task Manager",
-    "taskmanager-format": "Task Manager has returned invalid data",
-    "task-error": "Execution failed: {{0}}",
-    "invalid-ip": "No interface is configured with the address {{0}}",
-    "news-save-success": "News updated successfully",
-    "news-empty": "There was no news found in the database",
-    "news-del-success": "News deleted",
-    "reboot-unconfirmed": "Confirmation prompt to reboot not confirmed",
-    "invalid-template":"Selected template is not valid"
-}
+{"loginfail":"Username or Password incorrect","token":"Invalid token. CSRF attack?","adduser-disabled":"Insufficient privileges to add more users","password-mismatch":"Password and password confirmation do not match","empty-field":"A field was not filled","adduser-success":"User successfully added","no-permission":"No sufficient privileges to access this page","settings-updated":"Settings have been updated","debug-mode":"The debug mode is active!","value-invalid":"The value {{1}} is invalid for option {{0}} and has been ignored","invalid-action":"Invalid action: {{0}}","remote-timeout":"Could  not download resource {{0}} ({{1}})","remote-parse-failed":"Parsing the received data failed ({{0}})","missing-file":"There was no file selected!","invalid-file":"The file {{0}} does not exist!","upload-complete":"Upload of {{0}} was successful","upload-failed":"Upload failed: {{0}}","config-activated":"Configuration {{0}} has been activated","config-invalid":"Configuration with id {{0}} does not exist","error-write":"Failed to write {{0}}","error-read":"Error reading {{0}}","error-archive":"Corrupted archive or unsupported format","error-rename":"Could not rename {{0}} into {{1}}","error-nodir":"The directory {{0}} does not exist.","empty-archive":"The archive contains no files or directories","error-extract":"Could not unpack archive {{0}} to {{1}}","module-added":"Module successfully added","module-deleted":"Module {{0}} was deleted","module-in-use":"Module {{0}} is still used by Configuration {{1}}","taskmanager-error":"Failed to connect to the Task Manager","taskmanager-format":"Task Manager has returned invalid data","task-error":"Execution failed: {{0}}","invalid-ip":"No interface is configured with the address {{0}}","news-save-success":"News updated successfully","news-empty":"There was no news found in the database","news-del-success":"News deleted","reboot-unconfirmed":"Confirmation prompt to reboot not confirmed","invalid-template":"Selected template is not valid"}
