--- a/lang/pt/messages-hardcoded.json
+++ b/lang/pt/messages-hardcoded.json
@@ -1,20 +1,1 @@
-{
-	"lang_unknwonTaskManager":"Erro desconhecido do Gerenciador de Tarefas",
-	"lang_configurationCompilation":"Compilar configuração",
-	"lang_moduleAdd":"Adicionar Módulo",
-	"lang_adAuthentication":"Autenticação do Active Directory",
-	"lang_adModule":"Este módulo possibilita a aplicação para os computadores clientes com as contas de usuário de um Active Directory. Dependendo da configuração, o uso de um diretório de usuário no cliente é possível.",
-	"lang_authentication":"Autenticação",
-	"lang_generic":"Genérico",
-	"lang_addCustomModuleInfo":"Com um módulo estendido, é possível adicionar os arquivos para o sistema básico que usa este módulo, por exemplo, para usar arquivos de configuração específicas, que não podem ser criados com um dos outros assistentes. Adicionar um módulo estendido normalmente exige pelo menos um conhecimento básico do sistema Linux.",
-	"lang_days":"Dia(s)",
-	"lang_hours":"Hora(s)",
-	"lang_specificLogo":"Logotipo Específico da Instituição",
-	"lang_institutionLogo":"Logotipo da Instituição",
-	"lang_infoLogo":"Este módulo é usado para adicionar o logotipo de uma faculdade / universidade, que então, por exemplo, é exibido na tela de login.",
-	"lang_location":"Localização",
-	"lang_contentOf":"Conteúdo de \"",
-	"lang_serverConfiguration":"Configuração do servidor",
-	"lang_login":"Entrar",
-	"lang_createUser":"Criar Usuário"
-}
+{"lang_unknwonTaskManager":"Erro desconhecido do Gerenciador de Tarefas","lang_configurationCompilation":"Compilar configura\u00e7\u00e3o","lang_moduleAdd":"Adicionar M\u00f3dulo","lang_adAuthentication":"Autentica\u00e7\u00e3o do Active Directory","lang_adModule":"Este m\u00f3dulo possibilita a aplica\u00e7\u00e3o para os computadores clientes com as contas de usu\u00e1rio de um Active Directory. Dependendo da configura\u00e7\u00e3o, o uso de um diret\u00f3rio de usu\u00e1rio no cliente \u00e9 poss\u00edvel.","lang_authentication":"Autentica\u00e7\u00e3o","lang_generic":"Gen\u00e9rico","lang_addCustomModuleInfo":"Com um m\u00f3dulo estendido, \u00e9 poss\u00edvel adicionar os arquivos para o sistema b\u00e1sico que usa este m\u00f3dulo, por exemplo, para usar arquivos de configura\u00e7\u00e3o espec\u00edficas, que n\u00e3o podem ser criados com um dos outros assistentes. Adicionar um m\u00f3dulo estendido normalmente exige pelo menos um conhecimento b\u00e1sico do sistema Linux.","lang_days":"Dia(s)aaaaaaa","lang_hours":"Hora(s)","lang_specificLogo":"Logotipo Espec\u00edfico da Institui\u00e7\u00e3o","lang_institutionLogo":"Logotipo da Institui\u00e7\u00e3o","lang_infoLogo":"Este m\u00f3dulo \u00e9 usado para adicionar o logotipo de uma faculdade \/ universidade, que ent\u00e3o, por exemplo, \u00e9 exibido na tela de login.","lang_location":"Localiza\u00e7\u00e3o","lang_contentOf":"Conte\u00fado de \"","lang_serverConfiguration":"Configura\u00e7\u00e3o do servidor","lang_login":"Entrar","lang_createUser":"Criar Usu\u00e1rio"}
