--- a/lang/de/sysconfig/branding-start.json
+++ b/lang/de/sysconfig/branding-start.json
@@ -1,5 +1,5 @@
 {
-	"lang_branding":"Für beste Ergebnisse sollten Sie ihr Einrichtungslogo im SVG Format hochladen.	das SVG-Format ist ein Vektorgrafikformat, was zum Skalieren vorteilhaft ist. Eine Gute Quelle für SVG-Logos von Unis und Hochschulen ist ihr jeweiliger Wikipedia-Artikel.",
+	"lang_branding":"Für beste Ergebnisse sollten Sie ihr Einrichtungslogo im SVG Format hochladen. Das SVG-Format ist ein Vektorgrafikformat, was zum Skalieren vorteilhaft ist. Eine Gute Quelle für SVG-Logos von Unis und Hochschulen ist ihr jeweiliger Wikipedia-Artikel.",
 	"lang_or":"oder",
 	"lang_upload":"Hochladen",
 	"lang_urlLoad":"Bild von URL laden",
