--- a/lang/de/administration/template.json
+++ b/lang/de/administration/template.json
@@ -1,1 +1,1 @@
-{"lang_templateAdminHelp":"","lang_germanJSON":"","lang_englishJSON":"","lang_portugueseJSON":"","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"Portugiesisch TAG","lang_back":"Z\u00fcruck","lang_update":"Hochladen"}
+{"lang_templateAdminHelp":"","lang_germanJSON":"","lang_englishJSON":"Englisch JSON","lang_portugueseJSON":"Portugiesisch JSON","lang_germanTAG":"","lang_englishTAG":"","lang_portugueseTAG":"Portugiesisch TAG","lang_back":"Z\u00fcruck","lang_update":"Hochladen","lang_createTag":"","lang_newTAG":"","lang_deleteTAG":"L\u00f6schen"}
