--- a/lang/pt/page-minilinux.json
+++ b/lang/pt/page-minilinux.json
@@ -1,3 +1,1 @@
-{
-	"lang_listObtained":"A lista está sendo obtida..."
-}
+{"lang_listObtained":"A lista est\u00e1 sendo obtida...","lang_errorGetting":""}
