Updated german translations

--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -4,7 +4,7 @@
     "config-activated": "Konfiguration {{0}} wurde aktiviert",
     "config-invalid": "Konfiguration mit ID {{0}} existiert nicht",
     "debug-mode": "Der Debug-Modus ist aktiv!",
-    "deleted-tag": "",
+    "deleted-tag": "Tag wurde entfernt",
     "empty-archive": "Das Archiv enth\u00e4lt keine Dateien oder Verzeichnisse",
     "empty-field": "Ein Feld wurde nicht ausgef\u00fcllt",
     "error-archive": "Korruptes Archiv oder nicht unterst\u00fctztes Format",
@@ -37,8 +37,8 @@
     "taskmanager-error": "Verbindung zum Taskmanager fehlgeschlagen",
     "taskmanager-format": "Taskmanager hat ung\u00fcltige Daten zur\u00fcckgeliefert",
     "token": "Ung\u00fcltiges Token. CSRF Angriff?",
-    "unsuccessful-action": "",
-    "updated-tags": "",
+    "unsuccessful-action": "Nicht erfolgreich",
+    "updated-tags": "Tags wurden aktualisiert",
     "upload-complete": "Upload von {{0}} war erfolgreich",
     "upload-failed": "Upload schlug fehl: {{0}}",
     "value-invalid": "Der Wert {{1}} ist ung\u00fcltig f\u00fcr die Option {{0}} und wurde ignoriert"
