--- a/lang/pt/templates/translation/_page.json
+++ b/lang/pt/templates/translation/_page.json
@@ -1,8 +1,8 @@
 {
     "lang_adminInfo": "Nesta se\u00e7\u00e3o \u00e9 poss\u00edvel alterar as TAGs de JSON que cont\u00e9m os textos traduzidos utilizados no site. Para fazer isto, selecione um template abaixo para modificar suas respectivas TAGs. Alternativamente, clique no link abaixo para alterar as mensagens do site.",
+    "lang_editHardcoded": "",
     "lang_editMessages": "Editar Mensagens",
-    "lang_english": "Ingl\u00eas",
-    "lang_german": "Alem\u00e3o",
-    "lang_langAdministration": "Administra\u00e7\u00e3o da L\u00edngua",
-    "lang_portuguese": "Portugu\u00eas"
+    "lang_editSettings": "",
+    "lang_editTemplates": "",
+    "lang_langAdministration": "Administra\u00e7\u00e3o da L\u00edngua"
 }
