Added eventlog class, improved db-update machanism.
A warning will be shown in the main menu bar if the database schema needs to be updated.

--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -3,6 +3,7 @@
     "adduser-success": "Benutzer erfolgreich hinzugef\u00fcgt",
     "config-activated": "Konfiguration {{0}} wurde aktiviert",
     "config-invalid": "Konfiguration mit ID {{0}} existiert nicht",
+    "db-update-done": "Datenbank wurde aktualisiert",
     "debug-mode": "Der Debug-Modus ist aktiv!",
     "deleted-tag": "Tag wurde entfernt",
     "empty-archive": "Das Archiv enth\u00e4lt keine Dateien oder Verzeichnisse",
@@ -18,7 +19,6 @@
     "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
     "invalid-file": "Die Datei {{0}} existiert nicht!",
     "invalid-ip": "Kein Interface ist auf die Adresse {{0}} konfiguriert",
-    "invalid-path": "",
     "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
     "loginfail": "Benutzername oder Kennwort falsch",
     "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
