--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -3,6 +3,7 @@
     "adduser-success": "User successfully added",
     "config-activated": "Configuration {{0}} has been activated",
     "config-invalid": "Configuration with id {{0}} does not exist",
+    "db-update-done": "Database successfully updated",
     "debug-mode": "The debug mode is active!",
     "deleted-tag": "Tag was successfully removed",
     "empty-archive": "The archive contains no files or directories",
@@ -13,12 +14,9 @@
     "error-read": "Error reading {{0}}",
     "error-rename": "Could not rename {{0}} into {{1}}",
     "error-write": "Failed to write {{0}}",
-    "i18n-empty-tag": "",
-    "i18n-invalid-lang": "",
     "invalid-action": "Invalid action: {{0}}",
     "invalid-file": "The file {{0}} does not exist!",
     "invalid-ip": "No interface is configured with the address {{0}}",
-    "invalid-path": "",
     "invalid-template": "Selected template is not valid",
     "loginfail": "Username or Password incorrect",
     "missing-file": "There was no file selected!",
@@ -38,8 +36,6 @@
     "taskmanager-error": "Failed to connect to the Task Manager",
     "taskmanager-format": "Task Manager has returned invalid data",
     "token": "Invalid token. CSRF attack?",
-    "unsuccessful-action": "",
-    "updated-tags": "",
     "upload-complete": "Upload of {{0}} was successful",
     "upload-failed": "Upload failed: {{0}}",
     "value-invalid": "The value {{1}} is invalid for option {{0}} and has been ignored"
