Added NFS help, add missing strings for minilinux download

--- a/lang/en/templates/page-minilinux.json
+++ b/lang/en/templates/page-minilinux.json
@@ -1,4 +1,4 @@
 {
-    "lang_errorGetting": "",
-    "lang_listObtained": ""
+    "lang_errorGetting": "Error while downloading list!",
+    "lang_listObtained": "Downloading list..."
 }
