--- a/lang/en/messages-hardcoded.json
+++ b/lang/en/messages-hardcoded.json
@@ -1,1 +1,20 @@
-{"lang_unknwonTaskManager":"Unknown Task Manager error","lang_configurationCompilation":"Compile configuration","lang_moduleAdd":"Add Module","lang_adAuthentication":"Active Directory Authentication","lang_adModule":"This module makes possible the application to the client PCs with the user accounts of an Active Directory. Depending on the configuration, the use of a user directory on the client is possible.","lang_authentication":"Authentication","lang_generic":"Generic","lang_addCustomModuleInfo":"With an extended module it is possible to add any files to the basic system that uses this module, for example to use specific configuration files, which can not be created with one of the other Wizards. Adding an Extended module usually requires at least basic knowledge of the Linux system.","lang_days":"Day(s)","lang_hours":"Hour(s)","lang_specificLogo":"Institution Specific Logo","lang_institutionLogo":"Institution Logo","lang_infoLogo":"This module is used to add the logo of a College \/ University, which then, for example, is displayed on the login screen.","lang_location":"Location","lang_contentOf":"Content of \"","lang_serverConfiguration":"Server-side Configuration","lang_login":"Login","lang_createUser":"Create User"}
+{
+    "lang_adAuthentication": "Active Directory Authentication",
+    "lang_adModule": "This module makes possible the application to the client PCs with the user accounts of an Active Directory. Depending on the configuration, the use of a user directory on the client is possible.",
+    "lang_addCustomModule": "Add generic module",
+    "lang_addCustomModuleInfo": "With an extended module it is possible to add any files to the basic system that uses this module, for example to use specific configuration files, which can not be created with one of the other Wizards. Adding an Extended module usually requires at least basic knowledge of the Linux system.",
+    "lang_authentication": "Authentication",
+    "lang_configurationCompilation": "Compile configuration",
+    "lang_contentOf": "Content of \u0022",
+    "lang_createUser": "Create User",
+    "lang_days": "Day(s)",
+    "lang_generic": "Generic",
+    "lang_hours": "Hour(s)",
+    "lang_institutionLogo": "Institution Logo",
+    "lang_location": "Location",
+    "lang_login": "Login",
+    "lang_moduleAdd": "Add Module",
+    "lang_serverConfiguration": "Server-side Configuration",
+    "lang_specificLogo": "Institution Specific Logo",
+    "lang_unknwonTaskManager": "Unknown Task Manager error"
+}
