--- a/lang/pt/messages-hardcoded.json
+++ b/lang/pt/messages-hardcoded.json
@@ -1,1 +1,19 @@
-{"lang_unknwonTaskManager":"Erro desconhecido do Gerenciador de Tarefas","lang_configurationCompilation":"Compilar configura\u00e7\u00e3o","lang_moduleAdd":"Adicionar M\u00f3dulo","lang_adAuthentication":"Autentica\u00e7\u00e3o do Active Directory","lang_adModule":"Este m\u00f3dulo possibilita a aplica\u00e7\u00e3o para os computadores clientes com as contas de usu\u00e1rio de um Active Directory. Dependendo da configura\u00e7\u00e3o, o uso de um diret\u00f3rio de usu\u00e1rio no cliente \u00e9 poss\u00edvel.","lang_authentication":"Autentica\u00e7\u00e3o","lang_generic":"Gen\u00e9rico","lang_addCustomModuleInfo":"Com um m\u00f3dulo estendido, \u00e9 poss\u00edvel adicionar os arquivos para o sistema b\u00e1sico que usa este m\u00f3dulo, por exemplo, para usar arquivos de configura\u00e7\u00e3o espec\u00edficas, que n\u00e3o podem ser criados com um dos outros assistentes. Adicionar um m\u00f3dulo estendido normalmente exige pelo menos um conhecimento b\u00e1sico do sistema Linux.","lang_days":"Dia(s)aaaaaaa","lang_hours":"Hora(s)","lang_specificLogo":"Logotipo Espec\u00edfico da Institui\u00e7\u00e3o","lang_institutionLogo":"Logotipo da Institui\u00e7\u00e3o","lang_infoLogo":"Este m\u00f3dulo \u00e9 usado para adicionar o logotipo de uma faculdade \/ universidade, que ent\u00e3o, por exemplo, \u00e9 exibido na tela de login.","lang_location":"Localiza\u00e7\u00e3o","lang_contentOf":"Conte\u00fado de \"","lang_serverConfiguration":"Configura\u00e7\u00e3o do servidor","lang_login":"Entrar","lang_createUser":"Criar Usu\u00e1rio"}
+{
+    "lang_adAuthentication": "Autentica\u00e7\u00e3o do Active Directory",
+    "lang_adModule": "Este m\u00f3dulo possibilita a aplica\u00e7\u00e3o para os computadores clientes com as contas de usu\u00e1rio de um Active Directory. Dependendo da configura\u00e7\u00e3o, o uso de um diret\u00f3rio de usu\u00e1rio no cliente \u00e9 poss\u00edvel.",
+    "lang_addCustomModuleInfo": "Com um m\u00f3dulo estendido, \u00e9 poss\u00edvel adicionar os arquivos para o sistema b\u00e1sico que usa este m\u00f3dulo, por exemplo, para usar arquivos de configura\u00e7\u00e3o espec\u00edficas, que n\u00e3o podem ser criados com um dos outros assistentes. Adicionar um m\u00f3dulo estendido normalmente exige pelo menos um conhecimento b\u00e1sico do sistema Linux.",
+    "lang_authentication": "Autentica\u00e7\u00e3o",
+    "lang_configurationCompilation": "Compilar configura\u00e7\u00e3o",
+    "lang_contentOf": "Conte\u00fado de \u0022",
+    "lang_createUser": "Criar Usu\u00e1rio",
+    "lang_days": "Dia(s)",
+    "lang_generic": "Gen\u00e9rico",
+    "lang_hours": "Hora(s)",
+    "lang_institutionLogo": "Logotipo da Institui\u00e7\u00e3o",
+    "lang_location": "Localiza\u00e7\u00e3o",
+    "lang_login": "Entrar",
+    "lang_moduleAdd": "Adicionar M\u00f3dulo",
+    "lang_serverConfiguration": "Configura\u00e7\u00e3o do servidor",
+    "lang_specificLogo": "Logotipo Espec\u00edfico da Institui\u00e7\u00e3o",
+    "lang_unknwonTaskManager": "Erro desconhecido do Gerenciador de Tarefas"
+}
