--- a/lang/en/templates/page-main-guest.json
+++ b/lang/en/templates/page-main-guest.json
@@ -1,5 +1,7 @@
 {
     "lang_introGuest": "This is the administration interface of the local bwLehrpool intallation. Please authenticate yourself to adjust settings.",
     "lang_login": "Login",
+    "lang_noExistingAccount": "No account has been created yet. Sign up to become the administrator.",
+    "lang_register": "Register",
     "lang_welcome": "Welcome"
 }
